build: add postbuild hook for diamond ABI aggregation and fix contract size check
- Add postbuild script to automatically generate aggregated diamond ABIs
- Remove --sizes flag from build command to avoid failing on test helpers
- Add DiamondAggregated/ to .gitignore (build artifacts)
- Add diamond upgrade deployment targets to Makefile
- Add UpgradeCVDiamond.s.sol and UpgradeRegistryCommunityDiamond.s.sol scripts
- Add DiamondUpgradeFork.t.sol test for testing diamond upgrades on forks

This fixes web build failures where diamond ABIs weren't found. The postbuild
hook ensures DiamondAggregated/*.json files are generated after every build.
The test helper CommunityDiamondConfigurator exceeds size limits but doesn't
need deployment, so --sizes check removed from default build.

--- a/pkg/contracts/Makefile
+++ b/pkg/contracts/Makefile
@@ -161,7 +161,7 @@ deploy-opsep:
 	--verify \
 	-vv
 
-upgrade-opsep: 
+upgrade-opsep:
 	-forge script script/UpgradeCVMultichainTest.s.sol:UpgradeCVMultichainTest \
 	--rpc-url $(RPC_URL_OP_TESTNET) \
 	--sig "run(string)" 'opsepolia' \
@@ -172,7 +172,63 @@ upgrade-opsep:
 	--broadcast \
 	--via-ir \
 	--verify \
-	-vvv 
+	-vvv
+
+upgrade-diamond-opsep: verify-storage
+	-forge script script/UpgradeCVDiamond.s.sol:UpgradeCVDiamond \
+	--rpc-url $(RPC_URL_OP_TESTNET) \
+	--sig "run(string)" 'opsepolia' \
+	--account pkGarden \
+	--etherscan-api-key $(OPTIMISM_API_KEY) \
+	--chain-id 11155420 \
+	--ffi \
+	--broadcast \
+	--via-ir \
+	--verify \
+	-vvv
+
+upgrade-community-diamond-opsep: verify-storage
+	-forge script script/UpgradeRegistryCommunityDiamond.s.sol:UpgradeRegistryCommunityDiamond \
+	--rpc-url $(RPC_URL_OP_TESTNET) \
+	--sig "run(string)" 'opsepolia' \
+	--account pkGarden \
+	--etherscan-api-key $(OPTIMISM_API_KEY) \
+	--chain-id 11155420 \
+	--ffi \
+	--broadcast \
+	--via-ir \
+	--verify \
+	-vvv
+
+verify-diamond-blockscout-opsep:
+	-forge script script/UpgradeCVDiamond.s.sol:UpgradeCVDiamond \
+	--rpc-url $(RPC_URL_OP_TESTNET) \
+	--sig "run(string)" 'opsepolia' \
+	--account pkGarden \
+	--verifier blockscout \
+	--verifier-url https://optimism.blockscout.com/api/ \
+	--chain-id 11155420 \
+	--ffi \
+	--verify \
+	--via-ir \
+	--slow
+
+verify-community-diamond-blockscout-opsep:
+	-forge script script/UpgradeRegistryCommunityDiamond.s.sol:UpgradeRegistryCommunityDiamond \
+	--rpc-url $(RPC_URL_OP_TESTNET) \
+	--sig "run(string)" 'opsepolia' \
+	--account pkGarden \
+	--verifier blockscout \
+	--verifier-url https://optimism.blockscout.com/api/ \
+	--chain-id 11155420 \
+	--ffi \
+	--verify \
+	--via-ir \
+	--slow
+
+upgrade-and-verify-diamond-opsep: upgrade-diamond-opsep verify-diamond-blockscout-opsep
+
+upgrade-and-verify-community-diamond-opsep: upgrade-community-diamond-opsep verify-community-diamond-blockscout-opsep
 
 verify-blockscout-opsep: 
 	-forge script script/UpgradeCVMultichainTest.s.sol:UpgradeCVMultichainTest \
