fix: make web#generate depend on foundry#build to ensure diamond ABIs exist
web#generate task was running before contracts were built in Vercel,
causing it to fail when looking for DiamondAggregated/*.json files.

This adds foundry#build as a dependency to web#generate, ensuring:
1. Contracts are built first
2. Postbuild hook generates diamond ABIs
3. web:generate can find the required ABI files

--- a/turbo.json
+++ b/turbo.json
@@ -96,6 +96,9 @@
       "cache": false
     },
     "web#generate": {
+      "dependsOn": [
+        "foundry#build"
+      ],
       "cache": false
     },
     "subgraph#build": {
