--- a/turbo.json
+++ b/turbo.json
@@ -14,8 +14,7 @@
     },
     "build": {
       "dependsOn": [
-        "^build",
-        "web#generate"
+        "^build"
       ],
       "outputs": [
         "dist/**",
@@ -96,10 +95,12 @@
       "cache": false
     },
     "web#generate": {
-      "dependsOn": [
-        "foundry#build"
-      ],
       "cache": false
+    },
+    "web#build": {
+      "dependsOn": [
+        "web#generate"
+      ]
     },
     "subgraph#build": {
       "dependsOn": [
