--- a/pkg/subgraph/package.json
+++ b/pkg/subgraph/package.json
@@ -21,7 +21,7 @@
     "create-local": "graph create --node http://localhost:8020/ kamikazebr/gv2",
     "remove-local": "graph remove --node http://localhost:8020/ kamikazebr/gv2",
     "deploy:local": "pnpm manifest:local && graph deploy --node http://localhost:8020/ --ipfs http://localhost:5001 kamikazebr/gv2 -l v0.0.3",
-    "deploy:opsep": "pnpm manifest:opsep && graph deploy --studio gardens-v-2-optimism-sepolia",
+    "deploy:opsep": "pnpm auth:dev && pnpm manifest:opsep && graph deploy --studio gardens-v-2-optimism-sepolia",
     "deploy:arbsep": "pnpm auth:dev && pnpm manifest:arbsep && graph deploy --studio gardens-v2---arbitrum-sepolia",
     "deploy:ethsep": "pnpm auth:dev && pnpm manifest:ethsep && graph deploy --studio gv2-ethsepolia",
     "deploy:arbitrum": "pnpm manifest:arbitrum && graph deploy --studio gardens-v2---arbitrum",
