--- a/pkg/subgraph/src/templates/_cvStrategy.yaml
+++ b/pkg/subgraph/src/templates/_cvStrategy.yaml
@@ -11,7 +11,7 @@
         - CVStrategy
       abis:
         - name: CVStrategy
-          file: ../contracts/out/CVStrategy.sol/CVStrategy.json
+          file: ../contracts/out/DiamondAggregated/CVStrategy.json
       eventHandlers:
         - event: InitializedCV(uint256,((uint256,uint256,uint256,uint256),uint8,uint8,(uint256),(address,address,uint256,uint256,uint256,uint256),address,address,address[]))
           handler: handleInitialized
