--- a/pkg/subgraph/src/templates/registryFactory.yaml
+++ b/pkg/subgraph/src/templates/registryFactory.yaml
@@ -20,7 +20,7 @@
         - name: {{name}}
           file: ../contracts/out/{{name}}.sol/{{name}}.json
         - name: RegistryCommunity
-          file: ../contracts/out/RegistryCommunity.sol/RegistryCommunity.json
+          file: ../contracts/out/DiamondAggregated/RegistryCommunity.json
       eventHandlers:
         - event: CommunityCreated(address)
           handler: handleCommunityCreated
