--- a/pkg/subgraph/subgraph.yaml
+++ b/pkg/subgraph/subgraph.yaml
@@ -6,20 +6,15 @@ schema:
 dataSources:
   - kind: ethereum/contract
     name: RegistryFactory
-    network: matic
-    name: RegistryFactoryV0_0
-    network: localhost
+    network: optimism-sepolia
     context:
-      chainId:
+      chainId: 
         type: Int
-        data: 1337
+        data: 11155420
     source:
-      address: "0x57a9835b204dbcc101dbf981625a3625e8043b9c"
+      address: "0xEC8824e9a9498520891ec678e98c5bd3e65229c2"
       abi: RegistryFactory
-      startBlock: 61584764
-      address: "0xb7f8bc63bbcad18155201308c8f3540b07f84f5e"
-      abi: RegistryFactoryV0_0
-      startBlock: 0
+      startBlock: 29036730
     mapping:
       kind: ethereum/events
       apiVersion: 0.0.7
@@ -31,33 +26,33 @@ dataSources:
         - name: RegistryFactory
           file: ../contracts/out/RegistryFactory.sol/RegistryFactory.json
         - name: RegistryCommunity
-          file: ../contracts/out/RegistryCommunity.sol/RegistryCommunity.json
+          file: ../contracts/out/DiamondAggregated/RegistryCommunity.json
       eventHandlers:
         - event: CommunityCreated(address)
           handler: handleCommunityCreated
         - event: CommunityValiditySet(address,bool)
           handler: handleCommunityValiditySet
         - event: ProtocolFeeSet(address,uint256)
-          handler: handleProtocolFeeSet
+          handler: handleProtocolFeeSet  
         - event: ProtopiansChanged(address[],address[])
-          handler: handleProtopiansChanged
+          handler: handleProtopiansChanged  
         - event: KeepersChanged(address[],address[])
           handler: handleKeepersChanged
         - event: Initialized(uint8)
-          handler: handleRegistryInitialized
+          handler: handleRegistryInitialized  
       file: ./src/mappings/registry-factory.ts
 
   - kind: ethereum/contract
     name: PassportScorer
-    network: localhost
+    network: optimism-sepolia
     context:
-      chainId:
+      chainId: 
         type: Int
-        data: 1337
+        data: 11155420
     source:
-      address: "0x0165878a594ca255338adfa4d48449f69242eb8f"
+      address: "0xe3DC6e82B599cD80904aCf0a3cd9f7401d92CC37"
       abi: PassportScorer
-      startBlock: 0
+      startBlock: 29036730
     mapping:
       kind: ethereum/events
       apiVersion: 0.0.7
@@ -86,15 +81,15 @@ dataSources:
 
   - kind: ethereum/contract
     name: GoodDollarSybil
-    network: matic
+    network: optimism-sepolia
     context:
-      chainId:
+      chainId: 
         type: Int
-        data: 137
+        data: 11155420
     source:
-      address: "0x7D08db0138fc0f0Dcc9C7120b301Ff07D3A7b300"
+      address: "0xb01AC9015E04ecC424E646eBAb32dfa7670Ae8a6"
       abi: GoodDollarSybil
-      startBlock: 61584764
+      startBlock: 29036730
     mapping:
       kind: ethereum/events
       apiVersion: 0.0.7
@@ -118,9 +113,7 @@ dataSources:
 templates:
   - kind: ethereum/contract
     name: RegistryCommunity
-    network: matic
-    name: RegistryCommunityV0_0
-    network: localhost
+    network: optimism-sepolia
     source:
       abi: RegistryCommunity
     mapping:
@@ -135,14 +128,14 @@ templates:
         - Member
       abis:
         - name: RegistryCommunity
-          file: ../contracts/out/RegistryCommunity.sol/RegistryCommunity.json
+          file: ../contracts/out/DiamondAggregated/RegistryCommunity.json
         - name: ERC20
           file: ../contracts/out/ERC20.sol/ERC20.json
         - name: CVStrategy
-          file: ../contracts/out/CVStrategy.sol/CVStrategy.json
+          file: ../contracts/out/DiamondAggregated/CVStrategy.json
         - name: RegistryFactory
           file: ../contracts/out/RegistryFactory.sol/RegistryFactory.json
-
+     
       eventHandlers:
         - event: RegistryInitialized(bytes32,string,(uint256,string))
           handler: handleInitialized
@@ -194,9 +187,7 @@ templates:
 
   - kind: ethereum/contract
     name: CVStrategy
-    network: matic
-    name: CVStrategyV0_0
-    network: localhost
+    network: optimism-sepolia
     source:
       abi: CVStrategy
     mapping:
@@ -210,9 +201,9 @@ templates:
         - Allo
       abis:
         - name: CVStrategy
-          file: ../contracts/out/CVStrategy.sol/CVStrategy.json
+          file: ../contracts/out/DiamondAggregated/CVStrategy.json
         - name: RegistryCommunity
-          file: ../contracts/out/RegistryCommunity.sol/RegistryCommunity.json
+          file: ../contracts/out/DiamondAggregated/RegistryCommunity.json
         - name: Allo
           file: ../contracts/out/Allo.sol/Allo.json
       eventHandlers:
@@ -256,12 +247,14 @@ templates:
           handler: handleSuperfluidGDAConnected
         - event: SuperfluidGDADisconnected(indexed address,indexed address)
           handler: handleSuperfluidGDADisconnected
+        - event: ProposalEdited(uint256,(uint256,string),address,uint256)
+          handler: handleProposalEdited
 
       file: ./src/mappings/cv-strategy.ts
 
   - kind: ethereum/contract
     name: CollateralVault
-    network: localhost
+    network: optimism-sepolia
     source:
       abi: CollateralVault
     mapping:
@@ -281,8 +274,8 @@ templates:
           handler: handleCollateralWithdrawnFor
         - event: CollateralWithdrawn(uint256,indexed address,uint256,bool)
           handler: handleCollateralWithdrawn
-      file: ./src/mappings/cv-strategy.ts
-
+      file: ./src/mappings/cv-strategy.ts  
+  
   - name: ProposalDisputeMetadata
     kind: file/ipfs
     mapping:
@@ -295,7 +288,7 @@ templates:
       abis:
         - name: CVStrategy
           file: ../contracts/out/CVStrategy.sol/CVStrategy.json
-
+  
   - name: ProposalMetadata
     kind: file/ipfs
     mapping:
@@ -308,7 +301,7 @@ templates:
       abis:
         - name: CVStrategy
           file: ../contracts/out/CVStrategy.sol/CVStrategy.json
-
+  
   - name: PoolMetadata
     kind: file/ipfs
     mapping:
