--- a/.github/ISSUE_TEMPLATE/story.yml
+++ b/.github/ISSUE_TEMPLATE/story.yml
@@ -2,12 +2,15 @@ name: Story
 description: Capture a product or user story for the Gardens app.
 title: "As a [user], I want [feature] so that [benefit]"
 type: "Feature"
-projects: ["1Hive/20"]
+projects: ["1Hive/18"]
 body:
   - type: markdown
     attributes:
       value: |
         Keep it lightweight: describe the problem, the outcome, and how we'll confirm it delivers value.
+
+        **Figma:** [Gardens V2 UI](https://www.figma.com/design/v9ECAmLYs2pam1wguh3HUS/Gardens-V2-UI?node-id=1-25&p=f&t=QTrkzN8ykb9AdIi6-0)  
+        **Miro:** [Design Collaboration Board](https://miro.com/app/board/uXjVJF2w8YI=/)
   - type: input
     id: summary
     attributes:
