No title prefix for issue tmeplates

--- a/.github/ISSUE_TEMPLATE/task.yml
+++ b/.github/ISSUE_TEMPLATE/task.yml
@@ -1,6 +1,6 @@
 name: Task
 description: Track a general engineering or operational task.
-title: "[Task]: "
+type: "Task"
 projects: ["1Hive/17"]
 body:
   - type: markdown
