fix(contracts): guard threshold calc and refresh upgrade outputs

--- a/pkg/contracts/Makefile
+++ b/pkg/contracts/Makefile
@@ -179,6 +179,7 @@ upgrade-diamond-opsep: # verify-storage
 	--broadcast \
 	--ffi \
 	--verify \
+	--slow \
 	-vvv
 
 upgrade-community-diamond-opsep:  
