--- a/.gitmodules
+++ b/.gitmodules
@@ -13,12 +13,15 @@
 [submodule "lib/openzeppelin-contracts-upgradeable"]
 	path = lib/openzeppelin-contracts-upgradeable
 	url = https://github.com/OpenZeppelin/openzeppelin-contracts-upgradeable
-[submodule "lib/safe-smart-account"]
-	path = lib/safe-smart-account
-	url = https://github.com/safe-global/safe-smart-account
 [submodule "lib/protocol-monorepo"]
 	path = lib/protocol-monorepo
 	url = https://github.com/superfluid-org/protocol-monorepo
+[submodule "lib/safe-smart-account"]
+	path = lib/safe-smart-account
+	url = https://github.com/safe-global/safe-smart-account
 [submodule "protocol-monorepo"]
 	path = protocol-monorepo
 	url = https://github.com/superfluid-org/protocol-monorepo
+[submodule "lib/octant-v2-core"]
+	path = lib/octant-v2-core
+	url = https://github.com/golemfoundation/octant-v2-core
