chore: update foundry configuration and remove deprecated files
- Updated foundry.toml to include new test files for SafeArbitrator and ConnectGDAFork.
- Removed the DeployGardensYDSV2 script as it is no longer needed.
- Added new emergency withdrawal function to IYDSStrategy interface.
- Cleaned up GardensConvictionMechanism and related strategy files, removing obsolete versions.
- Updated various contract JSON outputs to reflect recent ABI changes.

--- a/foundry.toml
+++ b/foundry.toml
@@ -33,19 +33,19 @@ bytecode_hash = "none"
 remappings = [
   "solady/=lib/allo-v2/lib/solady/src",
   "allo-v2/=lib/allo-v2/contracts/",
+  "allo-v2-contracts/=lib/allo-v2/contracts/",
   "octant-v2/=lib/octant-v2-core/src/"
 ]
 
-ignored_paths = [
-  "pkg/contracts/src/tam/GardensConvictionMechanismV2.sol",
-  "pkg/contracts/src/yds/GardensYDSStrategyV2.sol",
-  "pkg/contracts/script/DeployGardensYDSV2.s.sol"
-]
-
+# Note: Octant-based contracts (0.8.25) are skipped in default profile
+# Build them separately with: FORGE_PROFILE=v2 forge build
 skip = [
-  "pkg/contracts/src/tam/GardensConvictionMechanismV2.sol",
-  "pkg/contracts/src/yds/GardensYDSStrategyV2.sol",
-  "pkg/contracts/script/DeployGardensYDSV2.s.sol"
+  "pkg/contracts/src/tam/GardensConvictionMechanism.sol",
+  "pkg/contracts/src/yds/GardensYDSStrategy.sol",
+  "pkg/contracts/script/DeployGardensYDS.s.sol",
+  "pkg/contracts/test/YDS/GardensYDSStrategy.t.sol",
+  "pkg/contracts/test/fork/GardensYDSFork.t.sol",
+  "pkg/contracts/test/fork/SuperfluidStreamingFork.t.sol"
 ]
 # auto_detect_remappings = true # recursive auto-detection of remappings
 # remappings = ["ds-test/=lib/forge-std/lib/ds-test/src/",
@@ -160,13 +160,13 @@ skip = [
 # # following example enables read-write access for the project dir :
 # #       `fs_permissions = [{ access = "read-write", path = "./"}]`
 # fs_permissions = [{ access = "read", path = "./out"}]
-# Profile for V2 (Octant imports) - Separate build with 0.8.25
+# Profile for Octant-based contracts - Separate build with 0.8.25
 [profile.v2]
 solc = "0.8.25"
 auto_detect_solc = false
 src = 'pkg/contracts/src'
 script = 'pkg/contracts/script'
-test = 'pkg/contracts/test/V2'
+test = 'pkg/contracts/test'
 out = 'pkg/contracts/out-v2'
 libs = ['lib']
 via_ir = false
@@ -176,28 +176,31 @@ ast = true
 build_info = true
 extra_output = ["storageLayout"]
 fs_permissions = [{ access = "read-write", path = "./"}]
-# Skip ALL allo-v2 to avoid version conflicts
+remappings = [
+  "solady/=lib/allo-v2/lib/solady/src",
+  "allo-v2/=lib/allo-v2/contracts/",
+  "allo-v2-contracts/=lib/allo-v2/contracts/",
+  "octant-v2/=lib/octant-v2-core/src/"
+]
+# Skip ALL allo-v2 to avoid version conflicts (Allo uses 0.8.19)
 skip = ["lib/allo-v2"]
-# Only compile V2-specific contracts
+# Ignore 0.8.19 contracts when building Octant-based contracts
 ignored_paths = [
     "pkg/contracts/src/CVStrategy/**",
     "pkg/contracts/src/RegistryCommunity/**",
     "pkg/contracts/src/RegistryFactory/**",
     "pkg/contracts/src/BaseStrategyUpgradeable.sol",
-    "pkg/contracts/src/yds/BaseYDSStrategy.sol",
-    "pkg/contracts/src/yds/GardensYDSStrategy.sol",
-    "pkg/contracts/src/tam/GardensConvictionMechanism.sol",
     "pkg/contracts/src/tam/ConvictionVotingTAM.sol",
     "pkg/contracts/src/tam/BaseConvictionVotingMechanism.sol",
-    "pkg/contracts/test/CVStrategyTest.sol",
-    "pkg/contracts/test/RegistryTest.sol",
-    "pkg/contracts/test/RegistryFactoryTest.sol",
-    "pkg/contracts/test/DiamondUpgrade*.sol",
-    "pkg/contracts/test/GooddollarTest.sol",
-    "pkg/contracts/test/PassportScorerTest.sol",
-    "pkg/contracts/test/ProxyOwnerTest.sol",
-    "pkg/contracts/test/SafeArbitratorTest.sol",
-    "pkg/contracts/test/ConnectGDAForkTest.sol"
+    "pkg/contracts/test/CVStrategyTest.t.sol",
+    "pkg/contracts/test/RegistryTest.t.sol",
+    "pkg/contracts/test/RegistryFactoryTest.t.sol",
+    "pkg/contracts/test/DiamondUpgrade*.t.sol",
+    "pkg/contracts/test/GooddollarTest.t.sol",
+    "pkg/contracts/test/PassportScorerTest.t.sol",
+    "pkg/contracts/test/ProxyOwnerTest.t.sol",
+    "pkg/contracts/test/SafeArbitratorTest.t.sol",
+    "pkg/contracts/test/ConnectGDAForkTest.t.sol"
 ]
 
 [fuzz]
