WIP: Add DiamondLoupe compatibility for louper.dev
- Create CVStrategyDiamondInit and RegistryCommunityDiamondInit
- Add DiamondLoupeFacet as 6th facet for both diamonds
- Remove inline loupe functions from main contracts to save space
- Update upgrade scripts to deploy loupe facet and call init
- Update test helpers to register loupe facet and init
- Register standard diamond interfaces (IERC165, IDiamondCut, IDiamondLoupe, IERC173)
- Register IArbitrable interface in CVStrategy diamond storage

Contract sizes after changes:
- CVStrategy: 23,819 bytes (was 25,807 bytes)
- RegistryCommunity: 21,250 bytes

All 95 CVStrategy tests passing, 2 unrelated edit-proposal tests failing.

Note: edit-proposal branch has compilation error (missing DiamondConfiguratorBase)
but has good fixes for missing selectors (activatePoints, increasePower) that
should be incorporated later.

--- a/pkg/contracts/Makefile
+++ b/pkg/contracts/Makefile
@@ -170,7 +170,7 @@ upgrade-opsep:
 	-vvv
 
 upgrade-diamond-opsep: # verify-storage
-	-forge script script/UpgradeCVDiamondTest.s.sol:UpgradeCVDiamondTest \
+	-forge script script/UpgradeCVDiamond.s.sol:UpgradeCVDiamond \
 	--rpc-url $(RPC_URL_OP_TESTNET) \
 	--sig "run(string)" 'opsepolia' \
 	--account pkGarden \
@@ -183,7 +183,7 @@ upgrade-diamond-opsep: # verify-storage
 	-vvv
 
 upgrade-community-diamond-opsep:  
-	-forge script script/UpgradeRegistryCommunityDiamondTest.s.sol:UpgradeRegistryCommunityDiamondTest \
+	-forge script script/UpgradeRegistryCommunityDiamond.s.sol:UpgradeRegistryCommunityDiamond \
 	--rpc-url $(RPC_URL_OP_TESTNET) \
 	--sig "run(string)" 'opsepolia' \
 	--account pkGarden \
