Adjust e2e setup and disable divvi tracking for E2E runs

--- a/pkg/e2e/package.json
+++ b/pkg/e2e/package.json
@@ -5,8 +5,9 @@
   "type": "module",
   "main": "index.js",
   "scripts": {
-    "test": "playwright test",
-    "test:headed": "playwright test --headed",
+    "build-cache": "pnpm exec synpress wallet-setup --force",
+    "test": "pnpm run build-cache && playwright test",
+    "test:headed": "pnpm run build-cache && playwright test --headed",
     "test:ui": "playwright test --ui",
     "test:debug": "playwright test --debug"
   },
@@ -15,7 +16,7 @@
   "license": "ISC",
   "devDependencies": {
     "@playwright/test": "^1.48.2",
-    "@synthetixio/synpress": "^4.1.0",
+    "@synthetixio/synpress": "^4.1.1",
     "@synthetixio/synpress-metamask": "^0.0.12",
     "@types/node": "^24.1.0",
     "dotenv": "^17.2.1"
