⬆️ Uploads coverage reports to Codecov
Adds a step to upload coverage reports to Codecov.

- Uses the Codecov GitHub Action to automate the upload process.
- Leverages a secret token for authentication.

--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -43,3 +43,8 @@ jobs:
           name: forge-coverage-lcov
           path: lcov.info
           if-no-files-found: warn
+
+      - name: Upload coverage reports to Codecov
+        uses: codecov/codecov-action@v5
+        with:
+          token: ${{ secrets.CODECOV_TOKEN }}
