✨ Excludes script and test for coverage
Excludes script and test directories from coverage reports.

This change improves the accuracy and relevance of coverage reports by excluding files that are not part of the core application logic.

--- a/foundry.toml
+++ b/foundry.toml
@@ -25,6 +25,12 @@ fs_permissions = [{ access = "read-write", path = "./"}]
 
 bytecode_hash = "none"
 
+[coverage]
+exclude = [
+  "script/**",
+  "test/**"
+]
+
 # fs_permissions = []
 remappings = [
   "solady/=lib/allo-v2/lib/solady/src",
