Use package coverage script

--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -33,20 +33,27 @@ jobs:
         with:
           version: nightly
 
+      - name: Setup pnpm
+        uses: pnpm/action-setup@v2
+        with:
+          version: 8.14.0
+          run_install: false
+
       - name: Init required submodules
         run: git submodule update --init --recursive --depth 1 --jobs 4
 
       - name: Run coverage
-        run: forge coverage --ir-minimum --match-path 'pkg/contracts/test/**' --exclude-tests --skip script --report lcov
+        run: pnpm --dir pkg/contracts run coverage
 
       - name: Upload coverage report
         uses: actions/upload-artifact@v4
         with:
           name: forge-coverage-lcov
-          path: lcov.info
+          path: pkg/contracts/lcov.info
           if-no-files-found: warn
 
       - name: Upload coverage reports to Codecov
         uses: codecov/codecov-action@v5
         with:
           token: ${{ secrets.CODECOV_TOKEN }}
+          files: pkg/contracts/lcov.info
