Enforce coverage via Codecov status

--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -57,3 +57,4 @@ jobs:
         with:
           token: ${{ secrets.CODECOV_TOKEN }}
           files: pkg/contracts/lcov.info
+          fail_ci_if_error: true
