✨ Adds issue type to templates
Adds a hidden issue type to issue templates.

- Sets the issue type for bug reports, stories, and tasks.
- Updates the workflow to read the issue type from the correct place.

--- a/.github/ISSUE_TEMPLATE/bug.yml
+++ b/.github/ISSUE_TEMPLATE/bug.yml
@@ -44,3 +44,10 @@ body:
         - Wallet:
     validations:
       required: false
+  - type: input
+      id: issue_type
+      attributes:
+        label: Type
+        value: "bug"
+      validations:
+        required: true
