--- a/.github/ISSUE_TEMPLATE/story.yml
+++ b/.github/ISSUE_TEMPLATE/story.yml
@@ -45,3 +45,10 @@ body:
       description: Links, designs, or open questions.
     validations:
       required: false
+  - type: input
+      id: issue_type
+      attributes:
+        label: Type
+        value: "feature"
+      validations:
+        required: true
