🐛 Fixes issue reporting trigger
Removes the 'typed' event trigger for issue reporting.

*   Simplifies issue reporting to only trigger on issue creation, preventing redundant notifications.

--- a/.github/workflows/issue-bug-to-discord.yml
+++ b/.github/workflows/issue-bug-to-discord.yml
@@ -2,7 +2,7 @@ name: Report Bug-type issues to Discord
 
 on:
   issues:
-    types: [opened, typed]
+    types: [opened]
 
 jobs:
   notify_discord:
