✏️ Renames bug report issue template
- Renames the bug report issue template for clarity.

--- a/.github/ISSUE_TEMPLATE/bug.yml
+++ b/.github/ISSUE_TEMPLATE/bug.yml
@@ -1,4 +1,4 @@
-name: Bug report
+name: Bug
 description: Report a problem or unexpected behavior in the Gardens app.
 labels: ["triage"]
 type: "Bug"
