--- a/.github/ISSUE_TEMPLATE/bug.yml
+++ b/.github/ISSUE_TEMPLATE/bug.yml
@@ -7,7 +7,10 @@ body:
   - type: markdown
     attributes:
       value: |
+        <!-- issue-type: bug -->
+
         Thanks for raising an issue. Share the essentials so we can reproduce and fix it quickly.
+
   - type: textarea
     id: steps
     attributes:
@@ -19,6 +22,7 @@ body:
         3. Observe ...
     validations:
       required: true
+
   - type: textarea
     id: expected
     attributes:
@@ -26,6 +30,7 @@ body:
       description: What did you expect to happen?
     validations:
       required: true
+
   - type: textarea
     id: actual
     attributes:
@@ -33,6 +38,7 @@ body:
       description: What happened instead? Include errors or screenshots if helpful.
     validations:
       required: true
+
   - type: textarea
     id: context
     attributes:
@@ -44,10 +50,3 @@ body:
         - Wallet:
     validations:
       required: false
-  - type: input
-    id: issue_type
-    attributes:
-      label: Type
-      value: "bug"
-    validations:
-      required: true
